--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,9 @@ dependencies = [
     "scikit-image>=0.24.0",
     "scipy>=1.14.1",
     "pandas>=2.2.3",
-    "pillow>=11.0.0",
+    "Pillow>=11.0.0",
     "tqdm>=4.66.5",
+    "psutil>=6.1.0",
 ]
 requires-python = "==3.12.*"
 readme = "README.md"
