--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "Pillow>=11.0.0",
     "tqdm>=4.66.5",
     "psutil>=6.1.0",
+    "pyqt6>=6.7.1",
 ]
 requires-python = "==3.12.*"
 readme = "README.md"
